--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "antd": "^5.11.2",
+    "axios": "^1.6.2",
     "fontawesome": "^5.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-toolkit": "^1.1.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
