--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fontawesome": "^5.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
