--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-toolkit": "^1.1.2",
+    "styled-components": "^6.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
