--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.11.2",
     "axios": "^1.6.2",
     "fontawesome": "^5.6.3",
+    "mediasoup-client": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -22,6 +23,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-toolkit": "^1.1.2",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.1",
     "zod": "^3.22.4"
   },
