--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.11.2",
     "axios": "^1.6.2",
-    "fontawesome": "^5.6.3",
     "mediasoup-client": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-redux": "^7.1.33",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
